Fix wrapping of long keys/values in bulk annotation tables
See card at
https://trello.com/c/fkEgcmXD/56-omero-web-can-t-resize-image-information-box

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -980,7 +980,10 @@
 	
 	
 	
-		
+	/* Bulk Annotations */
+	.bulk_annotations_table td {
+		white-space: normal !important;
+	}
 	
 
 	
